Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 6.03 ()
- fixed window-input in demos demo.C and Delaunay.C
- readded files :
  Triangulation_data_structure_using_list_2.h 
  Triangulation_default_data_structure_2.h 
  for backwards compatibility

Ver 6.02 ()
- changed mirror_index() amd mirror_vertex() in Triangulation_ds_face_2
  and all the calls to f->index(Face_handle) in  Triangulation_data_structure_2
  to fit the needs of the extended triangulatin data structure of
  additively weighted Voronoi diagram

Ver 6.01 (21/1/02)
- major change in Triangulation package :
  -suppression of Triangulation_face_2 and Triangulation_vertex_2 classes
   the TDS and Triangulation now have the same faces and vertices
   defined in TDS class
   as well as Face_handle and Vertex_handle classes
  -supression of Triangulation_default_data_structure_2
   and Triangulation_data_structure_using_list_2. There is now only
   one Triangulation_data_structure_2 (which for the moment is still
   using list).

Ver 5.24 (14/1/02)
- overloaded star_hole() in Constrained_triangulation_2 to restore
  constraint status of edges
- fixes demo Delaunay
- fixes a bug in star_hole() 

Ver 5.23 (8/1/02)
- changes prefixes to CGAL_CLIB_STD in front of ptrdiff_t and size_t
- prevent insertion of twice the very same constraint in 
  Constrained_triangulation_plus_2
- fixed the test of  Constrained_triangulation_plus_2

Ver 5.22 (3/12/01)
- replace "assert" by "CGAL_triangulation_assertion"
- in Regular_triangulation_euclidean_traits_2<R,W>
 changed the default for W from R::FT to R::FT
- SunPro support.

Ver 5.21 (14/9/01)
- added member functions to query the constraint hierarchy
  in Constrained_triangulation_plus_h_2.h
- added test for Constrained_triangulation_plus_h_2
- added operator()> in Pointer

Ver 5.20 (10/9/01)
- changed creators of Pointer for Spion needs

Ver 5.19 (14/8/01)