@@ -33,7 +33,7 @@ class Weighted_point : public Pt
 public:
   typedef We Weight;
   typedef Pt Point;
-  typedef typename Point::RT RT;
+  //typedef typename Point::RT RT;
 
   Weighted_point (const Point &p=Point(), const Weight &w = Weight(0))
       : Point(p), _weight(w) {}
